tests/nts_files/bad/single_link.nts
.chipsets:
input i1
output o1

.links:
i1:1 #Fancy comment!
